# CChess

./: .gitignore  01_FEATURE_SPECIFICATION.md  02_PROMPT_UI_UX.md  03_PROMPT_FEATURES_ROADMAP.md  04_TOM_TAT_LOGIC_NGHIEP_VU.md  05_KE_HOACH_DU_AN.md  06_KIEN_TRUC_BACKEND_THUC_DUNG.md  07_HUONG_DAN_THIET_LAP_FIREBASE.md  08_HUONG_DAN_BACKEND_WEBSOCKET.md  09_BACKEND_SERVER_HOAT_DONG.md  10_KE_HOACH_TEST.md  11_KE_HOACH_TICH_HOP_ENGINE.md  12_KE_HOACH_SIMULATION_LAYER.md  13_KE_HOACH_ELO_BOT_LADDER.md  14_KE_HOACH_PHAN_TICH_CHAM_DIEM_NUOC_DI.md  15_BAN_GIAO_KIEM_THU_PIKAFISH_OFFLINE.md  render.yaml
.github/workflows/: backend-ci.yml  engine-smoke.yml  flutter-ci.yml  post-deploy-smoke.yml  simulation-layer.yml
cchess/: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules  pubspec.yaml
cchess-backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.engine  README.md  package-lock.json  package.json  render.yaml  tsconfig.json
cchess-backend/lab/: README.md  bot.ts  control.ts  engine_smoke.ts  fuzz.ts  harness.ts  invariants.ts  load.ts  render.ts  run-one.ts  runner.ts  scenarios.ts  smoke.ts  tsconfig.json
cchess-backend/scripts/: economy.seed.json  import_economy.ts  import_puzzles.ts  import_shop.ts  (+3 more)
cchess/android/app/src/main/cpp/: CMakeLists.txt  eleeye_ffi.cpp
cchess/android/app/src/main/cpp/base/: base.h  base2.h  rc4prng.h  x86asm.h
cchess/android/app/src/main/cpp/eleeye/: genmoves.cpp  movesort.cpp  movesort.h  position.cpp  pregen.cpp  pregen.h
stitch_document_to_ui_designer/: 02_prompt_ui_ux.md
(+384 files in other folders)
